    segment.


* Combinatorial Maps

  - Breaking change: Change the type of Boolean marks, old type is int, new
    type is size_type. If no more mark is available, get_new_mark throws an
    exception, instead of returning -1.


* 2D Arrangements

  - Speed up the edge removal in case the incident faces contains many holes.


* 3D Mesh Generation

  - Add support of 3D gray level images as input for the tetrahedral mesh
    generation.

  - Breaking change: All models of the concept MeshDomain_3 must now provide a
    member function bbox().


* Advancing Front Surface Reconstruction

  - Optional template functor Filter is replaced by another optional template
    functor Priority. This allows to change the way facets are prioritized by
    the algorithm instead of having a simple option to reject some facets.
    Breaking change: Programs using the old Filter API will not compile anymore
    as it must be replaced with the Priority API as described in the manual.
    Codes using the default behavior are not impacted.


* Polygon Mesh Processing

  - Add a new triangle-based isotropic remeshing algorithm for triangulated
    surface meshes, CGAL::Polygon_mesh_processing::isotropic_remeshing() and a
    helper function for isotropic remeshing : CGAL::Polygon_mesh_processing::
    split_long_edges()

  - Add the function CGAL::Polygon_mesh_processing::border_halfedges() to
    collect the border of a given face range

  - Add the function CGAL::Polygon_mesh_processing::remove_isolated_vertices()
    to be used on any polygon mesh

  - Add the function CGAL::Polygon_mesh_processing::triangulate_face() to
    triangulate a single face of a polygon mesh

  - Add an overload for CGAL::Polygon_mesh_processing::triangulate_faces() to
    triangulate a range of faces of a polygon mesh

  - Add function keep_large_connected_components()

  - Add measuring functions for polygon meshes, to compute length, area, and